# AdwCustomizer

.github/workflows/: build.yml  ci.yml  flatpak-nightly.yml
build-aux/flatpak/: pypi-dependencies.json
data/: gradience.gresource.xml
gradience/: constants.py.in  gradience.in  main.py  meson.build  plugins_list.py
gradience/commands/: apply_preset.py  monet.py  plugins.py  presets.py
gradience/ui/: custom_css_group.py  explore_preset_row.py  option_row.py  preferences_window.py  preset_row.py  presets_manager_window.py  share_window.py  welcome_window.py  window.py
gradience/utils/: custom_presets.py  flatpak_overrides.py  manager.py  meson.build  preset.py  run_async.py  themes.py  utils.py
gradience/utils/plugins/: meson.build
po/: AdwCustomizer.pot  POTFILES
