# Install utility modules
gradience_utils = [
  '__init__.py',
  'custom_presets.py',
  'flatpak_overrides.py',
  'utils.py',
  'run_async.py',
  'css.py',
  'preset.py',
  'repo.py',
  'themes.py',
  'exceptions.py',
  'manager.py',
]
PY_INSTALLDIR.install_sources(gradience_utils, subdir: 'gradience/utils')

subdir('plugins')
